# vgmtrans

./: .cirrus.yml  .clang-format  .clang-format-ignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.osx  .travis.yml  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Info.plist  LICENSE  LICENSE.txt  README.md  VGMTrans_WTL.sln  VGMTrans_WTL.vcxproj  VGMTrans_WTL.vcxproj.filters  appveyor.yml  azure-pipelines.yml  buildbot.xml
lib/bass/: CMakeLists.txt  bass.lib  bassmidi.h  bassmidi.lib  libbass.dylib  libbassmidi.dylib
lib/qhexview/: CMakeLists.txt  qhexview.cpp  qhexview.h
lib/qhexview/document/: qhexcursor.cpp  qhexcursor.h  qhexdocument.cpp  qhexdocument.h  qhexmetadata.cpp  qhexmetadata.h  qhexrenderer.cpp  qhexrenderer.h
lib/snes_spc/: CMakeLists.txt  SPC_DSP.cpp
lib/tinyxml/: CMakeLists.txt  tinyxml.vcxproj
lib/zlib/: CMakeLists.txt  zlib.vcxproj
lib/zlib/minizip/: CMakeLists.txt
src/: .qmake.stash  AkaoFormat.cpp  AkaoInstr.cpp  AkaoInstr.h  AkaoScanner.cpp  AkaoScanner.h  AkaoSeq.cpp  AkaoSeq.h  BmpBtn.h  BytePattern.cpp  BytePattern.h  CMakeLists.txt  DLSFile.cpp  DLSFile.h  DataSeg.cpp  DataSeg.h  DragDropSource.h  ExtensionDiscriminator.cpp  ExtensionDiscriminator.h  FFT.cpp  FFT.h  FFTInstr.cpp  FFTInstr.h  FFTScanner.cpp  FFTScanner.h  Format.cpp  Format.h  GSFLoader.cpp  GameLoop.h  HOSA.cpp  HOSA.h  HOSAInstr.cpp  HOSAInstr.h  HOSAScanner.cpp  HOSAScanner.h  HexViewFrame.cpp  HexViewFrame.h  Info.plist  ItemTreeView.h  KabukiDecrypt.h  (+187 more)
src/DXUT/: DXUT.cpp  DXUT.h  DXUTRes.cpp  DXUTSettingsDlg.cpp  DXUTenum.cpp  DXUTgui.cpp  DXUTmisc.cpp  DXUTsound.cpp  dxstdafx.cpp  dxstdafx.h
src/VGMTrans.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
src/cmake/: FindFluidSynth.cmake
src/cmake/modules/: FindFluidsynth.cmake
src/common/: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h
src/contrib/: .gitignore
src/contrib/src/: main.mak
src/dependencies/tinyxml/: tinyxmlSTL.lib  tinyxml_STL.lib  tinyxmld_STL.lib
src/formats/: AkaoFormat.cpp  AkaoFormat.h  AkaoInstr.cpp  AkaoInstr.h  AkaoScanner.cpp  AkaoScanner.h  AkaoSeq.cpp  AkaoSeq.h  AkaoSnesFormat.h  AkaoSnesInstr.cpp  AkaoSnesInstr.h  AkaoSnesScanner.cpp  AkaoSnesScanner.h  AkaoSnesSeq.cpp  AkaoSnesSeq.h  CapcomSnesFormat.h  CapcomSnesInstr.cpp  CapcomSnesInstr.h  CapcomSnesScanner.cpp  CapcomSnesScanner.h  CapcomSnesSeq.cpp  CapcomSnesSeq.h  ChunSnesScanner.h  ChunSnesSeq.cpp  ChunSnesSeq.h  CompileSnesFormat.h  CompileSnesInstr.cpp  CompileSnesScanner.cpp  CompileSnesSeq.cpp  CompileSnesSeq.h  FFT.cpp  FFT.h  FFTFormat.h  FFTInstr.cpp  FFTInstr.h  FFTScanner.cpp  FFTScanner.h  HOSA.cpp  HOSA.h  HOSAFormat.h  (+105 more)
src/lib/fluidsynth/: mem_sfloader.c  mem_sfloader.h
src/lib/wtl/: atlctrlx.h  atldwm.h  atlprint.h  atlscrl.h
src/loaders/: GSFLoader.cpp  GSFLoader.h  KabukiDecrypt.cpp  KabukiDecrypt.h  MAMELoader.cpp  MAMELoader.h  NCSFLoader.cpp  NDS2SFLoader.cpp  PSF1Loader.cpp  PSF2Loader.cpp  SNSFLoader.cpp  SPCLoader.cpp  SPCLoader.h
src/loaders/sexypsf/: Misc.cpp  Misc.h  PsxBios.cpp  PsxBios.h  PsxCommon.h  PsxCounters.cpp  PsxCounters.h  PsxDma.cpp  PsxDma.h  PsxHLE.cpp  PsxHLE.h  PsxHw.cpp  PsxHw.h  PsxInterpreter.cpp  PsxMem.cpp  PsxMem.h  R3000A.cpp  R3000A.h  Spu.cpp  Spu.h  driver.h  types.h
src/mac/: MacVGMRoot.h  MacVGMRoot.mm  MacVGMRootCpp.mm  VGAppDelegate.h  VGAppDelegate.m  VGMTrans-Info.plist  VGMTrans-Prefix.pch  VGMasterViewController.h  VGMasterViewController.m  VGMasterViewController.xib  VGRawFileTableView.h  VGRawFileTableView.m  osdepend.cpp  osdepend.h
src/mac/Base.lproj/: MainMenu.xib
src/mac/VGMTrans.xcodeproj/: project.pbxproj
src/main/: BytePattern.cpp  BytePattern.h  CMakeLists.txt  ConversionContext.cpp  ConversionContext.h  ConversionTypes.h  Core.cpp  Core.h  DLSFile.cpp  DLSFile.h  DataBlock.cpp  DataBlock.h  DataSeg.cpp  DataSeg.h  ExtensionDiscriminator.cpp  ExtensionDiscriminator.h  Format.cpp  Format.h  Loader.cpp  Loader.h  LogItem.cpp  LogItem.h  LogManager.cpp  LogManager.h  Loop.h  Matcher.cpp  Matcher.h  Menu.h  MidiFile.cpp  MidiFile.h  ModSourceMap.cpp  ModSourceMap.h  Options.cpp  Options.h  PSFFile.cpp  PSFFile.h  PSFFile2.cpp  PSFFile2.h  RawFile.cpp  RawFile.h  (+62 more)
src/main/base/: Binary.h  binary.h
src/main/components/: ExtensionDiscriminator.cpp  ExtensionDiscriminator.h  FileLoader.cpp  FileLoader.h  Matcher.cpp  Matcher.h  PSFFile.cpp  PSFFile.h  PSFFile2.cpp  PSFFile2.h  SPCFile.cpp  SPCFile.h  Scanner.cpp  Scanner.h  ScannerManager.h  SynthType.h  VGMColl.cpp  VGMColl.h  VGMFile.cpp  VGMFile.h  VGMFileVariant.h  VGMItem.cpp  VGMItem.h  VGMMiscFile.cpp  VGMMiscFile.h  VGMMultiSectionSeq.cpp  VGMMultiSectionSeq.h  VGMSampColl.cpp  VGMSampColl.h  VGMTag.cpp  VGMTag.h
src/main/conversion/: DLSConversion.cpp  DLSConversion.h  DLSFile.cpp  DLSFile.h  JSONDump.h  SF2File.h  (+15 more)
src/tinyxml/: tinyxmldSTL.lib
src/ui/: CMakeLists.txt
src/vgmcis-qt/: About.cpp  CMakeLists.txt  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  MusicPlayer.cpp  MusicPlayer.h  QtVGMRoot.cpp  QtVGMRoot.h  ToolBar.cpp  ToolBar.h  main_ui.cpp
src/vgmtrans-qt/: About.cpp  About.h  CMakeLists.txt  IconBar.cpp  IconBar.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  MusicPlayer.cpp  MusicPlayer.h  QtVGMRoot.cpp  QtVGMRoot.h  ToolBar.cpp  ToolBar.h  main_ui.cpp
src/windows/: ChildFrm.cpp  ChildFrm.h  CollDialog.h  DockingDemo.h  DockingDemo.rc  DockingDemoview.h  FileFrame.cpp  FileFrame.h  FileView.h  HexView.CPP  HexView.cpp  HexView.h  ItemTreeView.cpp  LogListView.cpp  LogListView.h  MusicPlayer.cpp  MusicPlayer.h  RawFileListView.h  RawFileTreeView.cpp  RawFileTreeView.h  ScanDlg.h  TestDialog.cpp  TestDialog.h  VGMCollListView.h  VGMFileListView.cpp  VGMFileListView.h  VGMTrans.cpp  VGMTrans.rc  VGMTransTabCtrl.h  VGMTransWindow.h  WinVGMRoot.cpp  WinVGMRoot.h  aboutdlg.h  mainfrm.cpp  mainfrm.h  osdepend.h  resource.h  stdafx.cpp  stdafx.h
src/wtl/: atlcrack.h  atlctrls.h  atlctrlw.h  atldlgs.h  atlgdi.h  atlsplit.h  atlwince.h
(+1460 files in other folders)
